--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,10 +2,6 @@ define print_info
 	@printf "\e[1;33m$1 ...\e[0m\n"
 endef
 
-init-docker-compose-override:
-	$(call print_info,Copying dist of docker-compose.override)
-	cp docker-compose.override.yml.dist docker-compose.override.yml
-
 composer-install:
 	$(call print_info,Running composer install)
 	docker-compose run --rm php composer install
@@ -18,6 +14,10 @@ yarn-dev:
 	$(call print_info,Running yarn dev)
 	docker-compose run --rm php bash -c '/root/.yarn/bin/yarn dev'
 
+ckeditor-install:
+	$(call print_info,Running ckeditor:install)
+	docker-compose run --rm php bash -c 'bin/console ckeditor:install --clear=skip'
+
 db-create:
 	$(call print_info,Creating DB)
 	docker-compose run --rm php bash -c '/usr/wait-for.sh db:3306 -- bin/console doctrine:database:create --if-not-exists'
@@ -25,6 +25,10 @@ db-create:
 db-migrate:
 	$(call print_info,Migrating DB)
 	docker-compose run --rm php bash -c '/usr/wait-for.sh db:3306 -- bin/console doctrine:migrations:migrate --no-interaction'
+
+db-fixtures:
+	$(call print_info,DB fixtures)
+	docker-compose run --rm php bash -c '/usr/wait-for.sh db:3306 -- bin/console doctrine:fixtures:load --no-interaction'
 
 docker-build:
 	$(call print_info,Building docker containers)
@@ -34,5 +38,5 @@ docker-compose-up:
 	$(call print_info,Starting up docker containers)
 	docker-compose up -d
 
-init: init-docker-compose-override docker-build composer-install yarn-install yarn-dev docker-compose-up db-create db-migrate
+init: docker-build composer-install yarn-install yarn-dev ckeditor-install docker-compose-up db-create db-migrate db-fixtures
 	$(call print_info,The application has been installed successfully and runs on http://localhost/)
