--- a/src/.env.test
+++ b/src/.env.test
@@ -3,3 +3,5 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
+DATABASE_URL=mysql://root@db:3306/test
+TEST_SUPPRESS_DB_CREATE=0
