--- a/src/.env.test
+++ b/src/.env.test
@@ -5,3 +5,6 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 DATABASE_URL=mysql://root@db:3306/test
 TEST_SUPPRESS_DB_CREATE=0
+TEST_ADMIN_USERNAME=testUsername
+TEST_ADMIN_PASSWORD=testPassword
+TEST_ADMIN_PASSWORD_ENCODED='$argon2id$v=19$m=65536,t=4,p=1$h4IZADbexvsIRz5HWlqqow$Q8np8LTVypjNPdrOGz3bETt3LE/MsUmrt7hp14Q7pW8'
