--- a/src/composer.json
+++ b/src/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony-cmf/routing": "^2.1",
