--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
+        "nelmio/api-doc-bundle": "^3.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony-cmf/routing": "^2.1",
         "symfony/apache-pack": "^1.0",
